--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,9 @@ a {
 
 
 /*** LOGIN Seite ***/
-.body.index {
+.body-index {
     background-color: #4798b1;
+    background: #4798b1;
 }
 
 .card-container.card {
@@ -62,7 +63,7 @@ a {
 
 /** Card component */
 .card {
-    background-color: #4798b1;
+    background-color: #ffffff;
     /* just in case there no content*/
     padding: 20px 25px 30px;
     margin: 0 auto 25px;
