Anpassung CSS damit Titel im Bearbeitungsformular links stehen

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,14 @@ a {
 }
 
 /** Form styles*/
+.form-group {
+    text-align: left;
+}
+
+.select{
+    text-align: left;
+}
+
 .login-header {
     font-size: 36px;
     font-weight: bold;
